Add Login page and Refactor
