# OpenApi/openapi.json
@@ -6,7 +6,7 @@
     "version": "1.0.0"
   },
   "paths": {
-    "/api/v1/Accounts/register": {
+    "/api/v1/accounts/register": {
       "post": {
         "tags": [
           "Accounts"
@@ -25,13 +25,22 @@
           "x-position": 1
         },
         "responses": {
-          "200": {
+          "201": {
             "description": "",
             "content": {
-              "application/octet-stream": {
+              "application/json": {
                 "schema": {
-                  "type": "string",
-                  "format": "binary"
+                  "$ref": "#/components/schemas/RegistrationResponseDto"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationProblemDetails"
                 }
               }
             }
@@ -39,7 +48,7 @@
         }
       }
     },
-    "/api/v1/Accounts/login": {
+    "/api/v1/accounts/login": {
       "post": {
         "tags": [
           "Accounts"
@@ -61,10 +70,19 @@
           "200": {
             "description": "",
             "content": {
-              "application/octet-stream": {
+              "application/json": {
                 "schema": {
-                  "type": "string",
-                  "format": "binary"
+                  "$ref": "#/components/schemas/AuthResponseDto"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AuthResponseDto"
                 }
               }
             }
@@ -114,7 +132,7 @@
         }
       }
     },
-    "/api/v1/Products": {
+    "/api/v1/products": {
       "get": {
         "tags": [
           "Products"
@@ -137,7 +155,7 @@
         }
       }
     },
-    "/api/v1/Token/refresh": {
+    "/api/v1/token/refresh": {
       "post": {
         "tags": [
           "Token"
@@ -159,10 +177,9 @@
           "200": {
             "description": "",
             "content": {
-              "application/octet-stream": {
+              "application/json": {
                 "schema": {
-                  "type": "string",
-                  "format": "binary"
+                  "$ref": "#/components/schemas/AuthResponseDto"
                 }
               }
             }
@@ -170,12 +187,12 @@
         }
       }
     },
-    "/api/v1/WeatherForecast": {
+    "/api/v1/weatherforecasts": {
       "get": {
         "tags": [
-          "WeatherForecast"
+          "WeatherForecasts"
         ],
-        "operationId": "WeatherForecast_Get",
+        "operationId": "WeatherForecasts_Get",
         "responses": {
           "200": {
             "description": "",
@@ -196,12 +213,94 @@
   },
   "components": {
     "schemas": {
+      "RegistrationResponseDto": {
+        "type": "object",
+        "additionalProperties": false
+      },
+      "ValidationProblemDetails": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/HttpValidationProblemDetails"
+          },
+          {
+            "type": "object",
+            "additionalProperties": {
+              "nullable": true
+            },
+            "properties": {
+              "errors": {
+                "type": "object",
+                "additionalProperties": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        ]
+      },
+      "HttpValidationProblemDetails": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/ProblemDetails"
+          },
+          {
+            "type": "object",
+            "additionalProperties": {
+              "nullable": true
+            },
+            "properties": {
+              "errors": {
+                "type": "object",
+                "additionalProperties": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        ]
+      },
+      "ProblemDetails": {
+        "type": "object",
+        "additionalProperties": {
+          "nullable": true
+        },
+        "properties": {
+          "type": {
+            "type": "string",
+            "nullable": true
+          },
+          "title": {
+            "type": "string",
+            "nullable": true
+          },
+          "status": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "detail": {
+            "type": "string",
+            "nullable": true
+          },
+          "instance": {
+            "type": "string",
+            "nullable": true
+          }
+        }
+      },
       "UserForRegistrationDto": {
         "type": "object",
         "additionalProperties": false,
         "required": [
           "email",
-          "password"
+          "password",
+          "confirmPassword"
         ],
         "properties": {
           "email": {
@@ -213,6 +312,25 @@
             "minLength": 1
           },
           "confirmPassword": {
+            "type": "string",
+            "minLength": 1
+          }
+        }
+      },
+      "AuthResponseDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "isAuthSuccessful": {
+            "type": "boolean"
+          },
+          "errorMessage": {
+            "type": "string"
+          },
+          "token": {
+            "type": "string"
+          },
+          "refreshToken": {
             "type": "string"
           }
         }
@@ -281,6 +399,10 @@
         "type": "object",
         "additionalProperties": false,
         "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
           "date": {
             "type": "string",
             "format": "date-time"
